--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -27,6 +27,13 @@
                   <li><a class="text-navy" (click)="setColor('#001f3f')"><i class="fa fa-square"></i></a></li>
                 </ul>
               </div>
+              <div class="input-group">            
+                  <select  class="form-control" formControlName="category" name="" id="">
+                    <option value="" selected disabled>Categoria..</option>
+                    <option *ngFor="let cat of categories" value="{{cat.Id}}">{{cat.title}}</option>
+                  </select>
+
+              </div>
               <!-- /btn-group -->   
               <div class="input-group">
                   <input id="new-event-id" formControlName="id" type="text" class="form-control" style="display:none;">
