--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,3 +40,16 @@
           <a [routerLink]="['/home/habits']" class="small-box-footer">Ver <i class="fa fa-arrow-circle-right"></i></a>
         </div>
   </div>
+  <div class="col-lg-3 col-xs-6">
+    <div class="small-box bg-red bg-notes">
+        <div class="inner">
+          <h3>Notas</h3>
+  
+          <p>Mis notas</p>
+        </div>
+        <div class="icon">
+          <i class="fa fa-sticky-note-o"></i>
+        </div>
+        <a [routerLink]="['/home/notes']" class="small-box-footer">Ver <i class="fa fa-arrow-circle-right"></i></a>
+      </div>
+</div>
