--- a/src/app/task-abm/task-abm.component.html
+++ b/src/app/task-abm/task-abm.component.html
@@ -10,6 +10,16 @@
     <!-- form start -->
     <form class="form-horizontal" [formGroup]="taskForm" (ngSubmit)="onSubmit()">
       <div class="box-body">
+
+          <div class="form-group">
+              <label for="inputDate" class="col-sm-2 control-label">Categoría</label>
+          <div class="col-sm-10 col-md-6">
+              <select  class="form-control" formControlName="category" name="" id="">
+                <option *ngFor="let cat of categories" value="{{cat.Id}}">{{cat.title}}</option>
+              </select>
+            </div>
+          </div>
+
         <div class="form-group">
           <label for="inputDescription" class="col-sm-2 control-label">Descripción</label>
 
