fix minor errors

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
+
+<block-ui>
 <h1>Bienvenido a Doing!</h1>
 <div class="col-lg-3 col-xs-6">
     <!-- small box -->
@@ -53,10 +55,10 @@
         <a [routerLink]="['/home/notes']" class="small-box-footer">Ver <i class="fa fa-arrow-circle-right"></i></a>
       </div>
 </div>
-<div class="col-md-6"> 
-    <p-chart type="pie" [data]="datapie"></p-chart>
+<div *ngIf="showPie" class="col-md-6"> 
+    <p-chart type="pie" [data]="datapie" [options]="optionsPie"></p-chart>
 </div>
-<div class="col-md-6">
+<div *ngIf="showRadar" class="col-md-6">
     <p-chart type="radar" [data]="dataRadar" [options]="options"></p-chart>
 </div>
-
+</block-ui>
