--- a/src/app/starter/header/header.component.html
+++ b/src/app/starter/header/header.component.html
@@ -19,6 +19,11 @@
       <!-- Navbar Right Menu -->
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
+            <li class="dropdown messages-menu">
+            <a href="https://drive.google.com/file/d/1APQhQZRvmGpijfblwS6I3vHnUi_iCS1Z/view" target="_blank" class="dropdown-toggle" >
+                <i class="fa fa-question-circle"></i>
+              </a>
+            </li>
           <!-- Messages: style can be found in dropdown.less-->
           <!-- <li class="dropdown messages-menu">
             Menu toggle button
