--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,9 @@
 .bg-notes{
     background-color:#f9ea3e!important;
 }
+.separate-button{
+    margin-top:50px;
+}
+.center{
+    text-align: center;
+}
