--- a/src/app/starter/sidebar/sidebar.component.html
+++ b/src/app/starter/sidebar/sidebar.component.html
@@ -23,6 +23,7 @@
         <li routerLinkActive="active"><a [routerLink]="['/home/events']"><i class="fa fa-calendar-o"></i> <span>Eventos</span></a></li>
         <li routerLinkActive="active"><a [routerLink]="['/home/habits']"><i class="fa fa-line-chart"></i> <span>Habitos</span></a></li>
         <li routerLinkActive="active"><a [routerLink]="['/home/notes']"><i class="fa fa-sticky-note-o"></i> <span>Notas</span></a></li>
+        <li routerLinkActive="active"><a [routerLink]="['/home/charts']"><i class="fa fa-bar-chart"></i> <span>Reportes</span></a></li>
         <!-- <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
         <li class="treeview">
           <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
