all labels in spanish and fix event update error

--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -32,7 +32,7 @@
       <div class="box-header with-border">
         <i class="fa fa-success"></i>
 
-        <h3 class="box-title">Habitos en progreso</h3>
+        <h3 class="box-title">Habitos finalizados</h3>
       </div>
       <!-- /.box-header -->
       <div class="box-body">
@@ -58,7 +58,7 @@
       <div class="box-header with-border">
         <i class="fa fa-success"></i>
 
-        <h3 class="box-title">Habitos en progreso</h3>
+        <h3 class="box-title">Todos mis habitos</h3>
       </div>
       <!-- /.box-header -->
       <div class="box-body">
