--- a/src/app/starter/header/header.component.html
+++ b/src/app/starter/header/header.component.html
@@ -161,7 +161,7 @@
                   <a href="#" class="btn btn-default btn-flat">Profile</a>
                 </div> -->
                 <div class="pull-right">
-                  <a (click)="signout()" class="btn btn-default btn-flat">Sign out</a>
+                  <a (click)="signout()" class="btn btn-default btn-flat">Salir</a>
                 </div>
               </li>
             </ul>
