--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -11,11 +11,11 @@
       <div class="box-body">
             <div class="callout callout-success col-md-5">
                 <h4>Felicitaciones!</h4>
-                <p>Has pasado {{PHBestDayStrike.dayStrike}} días consecutivos cumpliendo el hábito de {{PHBestDayStrike.name}}.</p>
+                <p>Has pasado {{PHBestDayStrike.dayStrike}} días cumpliendo el hábito de {{PHBestDayStrike.name}}.</p>
            </div>   
            <div class="callout callout-danger separate-cards col-md-5">
               <h4>Oops!</h4>
-              <p>Tu peor racha es de {{PHBestStrike.dayStrike}} días consecutivos sin cumplir el hábito de {{PHBestStrike.name}}. Ánimos tu puedes lograrlo!</p>
+              <p>Tu peor racha es de {{PHBestStrike.dayStrike}} días sin cumplir el hábito de {{PHBestStrike.name}}. Ánimos tu puedes lograrlo!</p>
            </div>   
            <div  class="col-md-12"> 
               <p-chart type="pie" [data]="dataPiePH" [options]="optionsPiePH"></p-chart>
@@ -38,11 +38,11 @@
       <div class="box-body">
             <div class="callout callout-success col-md-5">
                 <h4>Felicitaciones!</h4>
-                <p>Has pasado {{FHBestDayStrike.dayStrike}} días consecutivos cumpliendo el hábito de {{FHBestDayStrike.name}}.</p>
+                <p>Has pasado {{FHBestDayStrike.dayStrike}} días cumpliendo el hábito de {{FHBestDayStrike.name}}.</p>
            </div>   
            <div class="callout callout-danger separate-cards col-md-5">
               <h4>Oops!</h4>
-              <p>Tu peor racha es de {{FHBestStrike.dayStrike}} días consecutivos sin cumplir el hábito de {{FHBestStrike.name}}.</p>
+              <p>Tu peor racha es de {{FHBestStrike.dayStrike}} días sin cumplir el hábito de {{FHBestStrike.name}}.</p>
            </div>   
            <div class="col-md-12"> 
               <p-chart type="pie" [data]="dataPieFH" [options]="optionsPieFH"></p-chart>
@@ -64,11 +64,11 @@
       <div class="box-body">
             <div class="callout callout-success col-md-5">
                 <h4>Felicitaciones!</h4>
-                <p>Tu record histórico de días consecutivos cumpliendo el hábito de {{AHBestDayStrike.name}} es de {{AHBestDayStrike.dayStrike}} .</p>
+                <p>Tu record histórico de días cumpliendo el hábito de {{AHBestDayStrike.name}} es de {{AHBestDayStrike.dayStrike}} .</p>
            </div>   
            <div class="callout callout-danger separate-cards col-md-5">
               <h4>Oops!</h4>
-              <p>Tu peor racha hasta el momento es de {{AHBestStrike.dayStrike}} días consecutivos sin cumplir el hábito de {{AHBestStrike.name}}. Animo puedes mejorar! </p>
+              <p>Tu peor racha hasta el momento es de {{AHBestStrike.dayStrike}} días sin cumplir el hábito de {{AHBestStrike.name}}. Animo puedes mejorar! </p>
            </div>   
            <div  class="col-md-6"> 
               <p-chart type="pie" [data]="dataPieAH" [options]="optionsPieAH"></p-chart>
